WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
294004
[Swift in WebKit] Fix concurrency issues in WKRKEntity
https://bugs.webkit.org/show_bug.cgi?id=294004
Summary
[Swift in WebKit] Fix concurrency issues in WKRKEntity
Richard Robinson
Reported
2025-06-03 22:02:37 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-06-03 22:05:13 PDT
<
rdar://problem/152553932
>
Richard Robinson
Comment 2
2025-06-03 22:05:19 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/46304
EWS
Comment 3
2025-06-05 10:49:08 PDT
Committed
295879@main
(4ef8db60ef01): <
https://commits.webkit.org/295879@main
> Reviewed commits have been landed. Closing PR #46304 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug