[Swift in WebKit] Fix concurrency issues in WKRKEntity https://bugs.webkit.org/show_bug.cgi?id=294004 rdar://152553932

Reviewed by Ada Chan.

Fix some concurrency issues in WKRKEntity and improve concurrency patterns used.

* Source/WebKit/WebKitSwift/RealityKit/WKRKEntity.h:

- Properly annotate all symbols with their respective actor
- Add a completion hander to `setUpAnimationWithAutoPlay` to facilitate using structured concurrency

* Source/WebKit/WebKitSwift/RealityKit/WKRKEntity.swift:

- Remove an import that wasn't needed
- Drive-by fix: use consistent style for implicit `return`s and `self`s
- Use structured concurrency where applicable
- Drive-by fix: Simplify some trivial expressions for more consistency
- Use an async sequence instead of a Combine subscription to stream events

Canonical link: https://commits.webkit.org/295879@main